# kemonomichi

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html
accounts/tests/: test_views.py
appointments/: forms.py  models.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_auto_20200902_2350.py  0003_auto_20200903_0022.py  0004_auto_20200903_0023.py  0005_auto_20200904_1436.py  0006_auto_20200904_1455.py
appointments/templates/appointments/: appointment_detail.html  appointment_form.html  appointment_list.html  appointment_mail.html  appointments_delete_confirm.html
appointments/tests/: test_models.py  test_views.py
clients/: forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client.py  0003_auto_20200904_1436.py  0004_auto_20200904_1455.py
clients/tests/: test_models.py  test_views.py
contrib/: .env_sample
core/: admin.py  models.py  urls.py  utils.py  views.py
core/templates/: base.html
core/templatetags/: filters.py
employees/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_auto_20200903_1857.py  0003_auto_20200904_1436.py
employees/tests/: test_models.py  test_views.py
pets/: forms.py  models.py  urls.py  views.py
pets/migrations/: 0001_initial.py  0002_auto_20200904_1436.py  0003_auto_20200904_1455.py
pets/tests/: test_models.py  test_views.py
setup/: asgi.py  settings.py  urls.py  wsgi.py
(+12 files in other folders)
