[tool.poetry]
name = "kemonomichi"
version = "0.1.0"
description = ""
authors = ["Cleyson Lima <cleysonph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
django-localflavor-br = "^1.0"
django-adminlte2 = "^0.4.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.2.1"
pytest = "^6.0.1"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.1"
model_bakery = "^1.1.1"
codecov = "^2.1.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
